src/objects/Deal_Stoplight_Deviation__c.object
<CustomObject>
    <fields>
        <fullName>Seeding_Demo_Units_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Seeding Demo Units Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_Std__c</fullName>
        <label>Seeding/Demo Units Std</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_VMImp__c</fullName>
        <label>Seeding/Demo Units VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_VM__c</fullName>
        <label>Seeding/Demo Units VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_ASP__c</fullName>
        <label>Sell-Through Plan ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_AppDate__c</fullName>
        <label>Sell-Through Plan AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_Approver__c</fullName>
        <label>Sell-Through Plan Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_Dev__c</fullName>
        <label>Sell-Through Plan Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_Exp__c</fullName>
        <label>Sell-Through Plan Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_Standard__c</fullName>
        <label>Sell-Through Plan Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Sell Through Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_VMImp__c</fullName>
        <label>Sell-Through Plan VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_VM__c</fullName>
        <label>Sell-Through Plan VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_ASP__c</fullName>
        <label>Shipping and Handling ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_AppDate__c</fullName>
        <label>Shipping and Handling AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_Approver__c</fullName>
        <label>Shipping and Handling Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_Dev__c</fullName>
        <label>Shipping and Handling Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_Exp__c</fullName>
        <label>Shipping and Handling Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_Standard__c</fullName>
        <label>Shipping and Handling Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Shipping and Handling Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_VMImp__c</fullName>
        <label>Shipping and Handling VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_VM__c</fullName>
        <label>Shipping and Handling VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_ASP__c</fullName>
        <label>Software PreLoads ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_AppDate__c</fullName>
        <label>Software PreLoads AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_Approver__c</fullName>
        <label>Software PreLoads Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_Dev__c</fullName>
        <label>Software PreLoads Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_Exp__c</fullName>
        <label>Software PreLoads Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Software PreLoads Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_Std__c</fullName>
        <label>Software PreLoads Std</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_VMImp__c</fullName>
        <label>Software PreLoads VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_VM__c</fullName>
        <label>Software PreLoads VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Green = No Deviation from Standard
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation from Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deviation w/min risk or No/Minimal ASP Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deviation w/High risk or significant ASP Increase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_ASP__c</fullName>
        <label>Volume Commitment ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_AppDate__c</fullName>
        <label>Volume Commitment AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_Approver__c</fullName>
        <label>Volume Commitment Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_Dev__c</fullName>
        <label>Volume Commitment Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_Exp__c</fullName>
        <label>Volume Commitment Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_Standard__c</fullName>
        <label>Volume Commitment Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Volume Commitment Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_VMImp__c</fullName>
        <label>Volume Commitment VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_VM__c</fullName>
        <label>Volume Commitment VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_ASP__c</fullName>
        <label>Warranty Service/Repair ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_AppDate__c</fullName>
        <label>Warranty Service/Repair AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_Approver__c</fullName>
        <label>Warranty Service/Repair Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_Dev__c</fullName>
        <label>Warranty Service/Repair Dev</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_Exp__c</fullName>
        <label>Warranty Service/Repair Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Warranty Service Repair Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_Std__c</fullName>
        <label>Warranty Service/Repair Std</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_VMImp__c</fullName>
        <label>Warranty Service/Repair VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_VM__c</fullName>
        <label>Warranty Service/Repair VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_ASP__c</fullName>
        <label>Warranty Term ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_AppDate__c</fullName>
        <label>Warranty Term AppDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_Approver__c</fullName>
        <label>Warranty Term Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_Dev__c</fullName>
        <label>Warranty Term Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_Exp__c</fullName>
        <label>Warranty Term Exp</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_Standard__c</fullName>
        <label>Warranty Term Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_Status__c</fullName>
        <description>Green = No Deviation
Yellow = Deviation w/min risk &amp; No (or minimal) ASP Increase
Red = Deviation w/High risk or results in significant ASP Increase</description>
        <label>Warranty Term Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_VMImp__c</fullName>
        <label>Warranty Term VMImp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_VM__c</fullName>
        <label>Warranty Term VM</label>
        <type>Url</type>
    </fields>
    <label>Deal Stoplight Deviation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Deviation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Stoplight Deviations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_DealStopLight_Exist</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), Deal__r.StoplightRecords__c &gt;= 1)</errorConditionFormula>
        <errorMessage>Stoplight already exist for this Deal. You cannot create more than one Stoplight for a Deal.</errorMessage>
    </validationRules>
</CustomObject>